# mkdocs-monospace-theme

./: README.md  pyproject.toml
docs/: index.md
monoweb_theme/: base.html
monoweb_theme/css/: theme.css
