[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-monoweb-theme"
version = "1.0.0"
description = "Monoscape web theme for MkDocs"
readme = "README.md"
license = "BSD-2-Clause"
authors = [
    {name = "Sebastien Campion", email = "sebastien.campion@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
dependencies = [
    "mkdocs >= 1.5",
]

[project.urls]
Source = "https://github.com/scampion/mkdocs-monoweb-theme"

[project.entry-points."mkdocs.themes"]
monoweb = "monoweb_theme"

[tool.hatch.build]
include = ["/monoweb_theme"]

[tool.hatch.build.targets.wheel]
packages = ["monoweb_theme"]
metadata-version = "2.1"
